choice from Map